호스트 신청

--- a/sub_project_spring/pom.xml
+++ b/sub_project_spring/pom.xml
@@ -55,6 +55,10 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+        	<groupId>javax.servlet</groupId>
+        	<artifactId>jstl</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
