--- a/sub_project_spring/pom.xml
+++ b/sub_project_spring/pom.xml
@@ -47,6 +47,22 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<!-- spring boot auto restart(설정, 클래스가 바뀌면 auto restart) -->
         <!-- 스프링 레거시 프로젝트에서는 자바 코드가 바뀌면 자동으로 서버가 다시 시작되는데 부트에서는
         그런 것이 없기 때문에 서버가 재시작할 수 있도록 설정을 해주어야 함 -->
@@ -59,6 +75,16 @@
         	<groupId>javax.servlet</groupId>
         	<artifactId>jstl</artifactId>
         </dependency>
+        <!--  JSP 뷰 사용하기 위한 의존성 추가 -->
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>jstl</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.tomcat.embed</groupId>
+		    <artifactId>tomcat-embed-jasper</artifactId>
+		    <scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
